--- a/css/style.css
+++ b/css/style.css
@@ -713,6 +713,10 @@ a {
 
 
 @media only screen and (max-width:993px) {
+
+    .header {
+        display: none;
+    }
     h1 {
         font-size: 68px;
     }
